# RISC-V-Simulator

./: .gitignore  CMakeLists.txt  README.md
source/: ALU.cpp  ALU.hpp  ISA.cpp  ISA.hpp  ISA_base.hpp  inc.cpp  inc.hpp  main.cpp  memory.cpp  memory.hpp  pipeline.hpp  predictor.hpp  register_manager.cpp  register_manager.hpp  simulator.cpp  simulator.hpp
